--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@material-ui/core": "^3.9.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "typeface-roboto": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts start",
