--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-modal": "^3.8.1",
     "react-scripts": "^2.1.5",
-    "typeface-roboto": "0.0.54"
+    "typeface-roboto": "0.0.54",
+    "prop-types": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
