--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui-search-bar": "^0.4.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-modal": "^3.8.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
